style: format codes and rename some variables
변수 이름을 수정하고 코드 포맷팅을 더 적용하였습니다.